Lecture 9 done + .ini files updated

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,3 +1,6 @@
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=B0FE0F074F08216B26208882E6CB002E
 ProjectName=Third Person Game Template
+
+[/Script/Engine.GameSession]
+MaxPlayers = 100
